--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,9 @@ version '1.0-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
-    mavenCentral()
+    //mavenCentral()
+    mavenLocal()
+    jcenter()
 }
 
 jacocoTestReport {
