--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,10 @@ jacocoTestReport {
 
 dependencies {
     // Use JUnit Jupiter API for testing.
+    testImplementation 'junit:junit:4.12'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
+    testImplementation 'org.mockito:mockito-all:1.9.5'
+    testImplementation 'org.easytesting:fest-assert-core:2.0M10'
 
     // Use JUnit Jupiter Engine for testing.
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
